--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -13,7 +13,7 @@ Es gilt:
   \item \textbf{Logarithmus} $\int \frac{f' (t)}{f (t)} \; dt = \log (\abs{f (x)})$
 \end{itemize}
 \BoxStart{}
-\subsection*{Substitution Beispiel}
+\subsection*{Beispiel: Substitution}
 \begin{align*}
   \int \cos (x^2) 2x \; dx &  & u = x^2                              \\
   \int \cos (u) du         &  & \frac{du}{dx} = \frac{dx^2}{dx} = 2x
