--- a/probability-and-statistics/Source/Kapitel4.tex
+++ b/probability-and-statistics/Source/Kapitel4.tex
@@ -1,5 +1,8 @@
-\hypertarget{sec:2}{\section{Zufallsvariablen}}
+{\section{\oint \oint \oint \vert \| ( len}}
+
+
 \subsection*{Zufallsvariable}
+\includegraphics[width=\columnwidth]{diskrete_stetige_verteilung.png}\\
 Sein $ (\Omega, \F, P)$ ein Wahrscheinlichkeitsraum. Also $\Omega$ ein
 Grundraum, $\F \subseteq 2^\Omega$ die beobachtbaren Ereignisse und $P$ ein
 Wahrscheinlichkeitsmass auf $\F$. Eine (reelwertige) Zufallsvariable auf
@@ -18,6 +21,29 @@ und hat die Eigenschaften:
         für $u \ra t$ mit $u > t$
   \item $\lim_{t \ra - \infty} F_X (t) = 0$ und $\lim_{t \ra + \infty} F_X (t) = 1$
 \end{itemize}
+\BoxStart{}
+\subsection*{Beispiel: Verteilungsfunktion}
+Um zu verhindern, dass ein Gerät infolge eines defekten Halbleiters längere Zeit ausfällt, 
+werden zwei identische, parallel geschaltete Halbleiter zu einem Bauteil zusammengefasst.
+Eine Kontrolllampe leuchtet auf, wenn einer der beiden Halbleiter ausgefallen ist. 
+Wir nehmen an, dass die Lebensdauern der Halbleiter unabhängige, exponentialverteilte Zufallsvariablen mit Erwartungswert 60 Tage sind.
+Wie ist die Zeit, nach der die Kontrolllampe ufleuchtet, verteilt? \\
+
+Seien \(H_1\) und \(H_2\) die Lebensdauern der entsprechenden Halbleiter. Nach Voraussetzung sind \(H_1\) und \(H_2\) i.i.d. und 
+Exp(\(\lambda\))-verteilt mit \(\lambda = \frac{1}{60}\). Sei \(T\) die Zeit, nach der die Kontrolllampe aufleuchtet; 
+also ist \(T = \min\{H_1, H_2\}\).
+Die Verteilungsfunktion von \(T\) ist gegeben durch
+
+\begin{align*}
+  F_T(t)  &= P [T \leq t] = P [\min\{H_1, H_2\} \leq t]\\
+          &= 1 - P [\min\{H_1, H_2\} > t] = 1 - P [H_1 > t, H_2 > t]\\
+          &= 1 - P [H_1 > t]P [H_2 > t]\\
+          &= (1 - \exp(-2\lambda t)) \mathbf{1}_{[0, \infty)}(t)]
+\end{align*}
+
+d.h. \(T\) ist wieder exponentialverteilt mit Parameter \(2\lambda = \frac{1}{30}\).
+
+\BoxEnd{}
 \subsection*{Dichtefunktion}
 Das Analogon der Gewichtsfunktion im Diskreten Fall. Eine Zufallsvariable $X$
 mit Verteilungsfunktion $F_X (t) = P[X \leq t]$ heisst (absolut) stetig mit
@@ -79,7 +105,7 @@ Die Normalverteilung hat zwei Parameter: $\mu \in \R$ und $\sigma^2 > 0$. Die
 zugehörige Zufallsvariable $X$ hat den Wertebereich $\W (X) = \R$ und die
 Dichtefunktion:
 \begin{align*}
-  f_X (t) = \frac{1}{\sigma \sqrt{2 \pi}} e^{- \frac{ (t - \mu)^2}{2 \sigma^2}}
+  f_X (t) = \frac{1}{\sigma \sqrt{2 \pi}} e^{- \frac{{(t - \mu)}^2}{2 \sigma^2}}
    &  & \text{für } t \in \R
 \end{align*}
 welche symmetrisch um $\mu$ ist. Wir schreiben kurz: $X \sim \Normalverteilt$.
@@ -124,7 +150,7 @@ Sei $X$ eine Zufallsvariable und $p \in \R^+$. Wir definieren:
   \item $p$-te absolute Moment von $X$: $M_p := E[\abs{X}^p]$
   \item falls $M_n < \infty$ für ein $n$, dann ist das $n$-te (rohe) Moment von $X$
         durch $m_n := E[X^n]$ definiert.
-  \item Das $n$-te zentralisierte Moment von $X$ ist durch $\mu_n := E[ (X - E[X])^n]$
+  \item Das $n$-te zentralisierte Moment von $X$ ist durch $\mu_n := E[(X - E[X])^n]$
         definiert.
 \end{itemize}
 Es gilt weiter, dass $M_n < \infty$ für $n \in \N \implies \abs{m_m} \leq M_n$.
@@ -134,8 +160,7 @@ Es gilt weiter, dass $M_n < \infty$ für $n \in \N \implies \abs{m_m} \leq M_n$.
   p \leq q \land M_q < \infty & \implies M_p < \infty
 \end{align*}
 \subsection*{Gemeinsame Verteilung/Dichte}
-Die Gemeinsame Verteilungsfunktion von Zufallsvariablen $\zufallsvariablen$ ist
-die Abbildung $F: \R^n \mapsto [0, 1]$ mit:
+Die Gemeinsame Verteilungsfunktion von Zufallsvariablen $\zufallsvariablen$ ist die Abbildung $F: \R^n \mapsto [0, 1]$ mit:
 \begin{align*}
   F (x_1, \dots, x_n) & := P[X_1 \leq x_1, \dots, X_n \leq x_n]                                                 \\
                       & = \int_{-\infty}^{x_1} \dots \int_{-\infty}^{x_n} f (t_1, \dots, t_n) \; dt_n \dots t_1
@@ -162,6 +187,7 @@ der Randverteilung von $X$ gegeben durch:
   x \mapsto p_X (x) := \sum_{y_i \in \W (X)} P[X = x, Y = y_i]
 \end{align*}
 \BoxStart{}
+\subsection*{Beispiel: Dichtefunktion berechnen}
 Seien $X$ und $Y$ zwei unabhängige Zufallsvariablen, beide exponentialverteilt mit
 Parameter $\lambda > 0$. Definiere
 \[
@@ -173,12 +199,14 @@ die Dichtefunktion $f_U$ und Verteilungsfunktion $F_U$
   P[U \leq u] &= \lambda^2 \int_0^\infty e^{-\lambda x} \left(\int_0^\infty 1_{\frac{x}{x + y}\leq u}e^{-\lambda y}dy\right)dx\\ 
   &= \lambda^2 \int_0^\infty e^{-\lambda x} \left(\int_0^\infty 1_{x(u^{-1} - 1)\leq y}e^{-\lambda y}dy\right)dx\\ 
   &= \lambda \int_0^\infty e^{-\lambda x} \left(\int_{x(u^{-1} -1)}^\infty \lambda e^{-\lambda y}dy\right)dx\\ 
-  &= \lambda \int_0^\infty e^{-\lambda x} e^{-\lambda x (u^{-1} -1)}dx\ &= \lambda \int_0^\infty e^{-\lambda u^-1 x}dx\\ 
+  &= \lambda \int_0^\infty e^{-\lambda x} e^{-\lambda x (u^{-1} -1)}dx\\ 
+  &= \lambda \int_0^\infty e^{-\lambda u^-1 x}dx\\ 
   &= u 
 \end{align*}
 
 \BoxEnd{}
 \BoxStart{}
+\subsection*{Beispiel: Randverteilung, gemeinsame Dichte}
 Man wählt zufällig einen Punkt $P = (U, V)$ in dem Gebiet $D$. Die gemeinsame Dichte von $(U, V)$
 \[
   f_{U, V} (u, v) =
@@ -293,6 +321,7 @@ Mit der Substitution
   f_Y(y)  & = f_X(\phi^{-1}(y))|\text{det }J_{\phi^{-1}}(y)| \\
 \end{align*}
 \BoxStart{}
+\subsection*{Beispiel: Transformation}
 Sei $X$ eine Zufallsvariable mit Dichte $f_X(x), x \in \R$ und sei $Y = e^X$. Was ist die Dichte $f_Y(y), y > 0$ der Zufallsvariable $Y$?
 \begin{align*}
   Y             & = e^X                          \\
