--- a/probability-and-statistics/Source/Kapitel2.tex
+++ b/probability-and-statistics/Source/Kapitel2.tex
@@ -61,15 +61,16 @@ Sei $X$ eine diskrete Zufallsvariable. Ist $E[X^2] < \infty$, so heisst:
 \end{align*}
 die Varianz von $X$. Es gilt weiter:
 \begin{itemize}
+  \item $E[Z]^2 \leq E[Z^2]$
   \item $Var[X] = E[X^2] - {E[X]}^2$
   \item $Var[a \cdot X + b] = a^2 \cdot Var[X]$
   \item $Var[X - Y] = Var[X] +  {-1}^2 \cdot Var[Y]$
   \item $Var(X+Y) = Var(X) + Var(Y) + 2Cov(X,Y)$
 \end{itemize}
 \subsection*{Standardabweichung}
-$$
+\[
   \sigma (X) = \sqrt{Var[X]}
-$$
+\]
 \subsection*{Gemeinsame Verteilung}
 Seien $\zufallsvariablen$ beliebige Zufallsvariablen. Die Gemeinsame
 Verteilungsfunktion von $\zufallsvariablen$ ist die Abbildung $F: \R^n \mapsto
