--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -1,4 +1,3 @@
-
 \section{Tabellen}
 \subsection*{Ableitung, Integration}
 Es gilt:
@@ -98,3 +97,5 @@ Es gilt:
   \end{tabularx}
 \end{center}
 
+\includegraphics*[width=\columnwidth]{sin-cos-tan}
+\newpage
