--- a/probability-and-statistics/Source/Kapitel4.tex
+++ b/probability-and-statistics/Source/Kapitel4.tex
@@ -1,4 +1,7 @@
 \subsection*{Zufallsvariable}
+\[
+P[X = x] = 0 \text{für stetige Zufallsvariablen ist die Wahrscheinlichkeit einer einzigen Variable gleich 0} 
+\]
 \includegraphics[width=\columnwidth]{diskrete_stetige_verteilung.png}\\
 Sein $ (\Omega, \F, P)$ ein Wahrscheinlichkeitsraum. Also $\Omega$ ein
 Grundraum, $\F \subseteq 2^\Omega$ die beobachtbaren Ereignisse und $P$ ein
@@ -193,7 +196,8 @@ Parameter $\lambda > 0$. Definiere
 Seien $f_U$ und $f_V$ die zu $U$ und $V$ gehörigen Dichtefunktionen. Berechne
 die Dichtefunktion $f_U$ und Verteilungsfunktion $F_U$
 \begin{align*} 
-  P[U \leq u] &= \lambda^2 \int_0^\infty e^{-\lambda x} \left(\int_0^\infty 1_{\frac{x}{x + y}\leq u}e^{-\lambda y}dy\right)dx\\ 
+  P[U \leq u] &= f_U(u) = \int_\infty^\infty f(u, v) dy \\
+  &= \lambda^2 \int_0^\infty e^{-\lambda x} \left(\int_0^\infty 1_{\frac{x}{x + y}\leq u}e^{-\lambda y}dy\right)dx\\ 
   &= \lambda^2 \int_0^\infty e^{-\lambda x} \left(\int_0^\infty 1_{x(u^{-1} - 1)\leq y}e^{-\lambda y}dy\right)dx\\ 
   &= \lambda \int_0^\infty e^{-\lambda x} \left(\int_{x(u^{-1} -1)}^\infty \lambda e^{-\lambda y}dy\right)dx\\ 
   &= \lambda \int_0^\infty e^{-\lambda x} e^{-\lambda x (u^{-1} -1)}dx\\ 
@@ -213,13 +217,15 @@ Man wählt zufällig einen Punkt $P = (U, V)$ in dem Gebiet $D$. Die gemeinsame 
   \end{cases}
 \]
 \begin{center}
-  \includegraphics[width=0.2\textwidth]{dichte_aufgabe.png}
+  \includegraphics[width=0.45\textwidth]{dichte_aufgabe.png}
 \end{center}
-\begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]  \item bestimme Konstnte $c$
+\begin{enumerate}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]  
+  \item bestimme Konstnte $c$
   \item bestimme Randverteiungsfunktion von U und Randdichtefunktion $f_U(u)$.
   \item Sind $U$ und $V$ unabhängig?
-\end{itemize}
-
+\end{enumerate}
+\begin{enumerate}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]  
+  \item 
 \begin{align*}
   D =  & \{(a, b) \in \mathbb{R}^2 : -1 \leq a \leq 1 \text{ and } -2 \leq b \leq 2\} \\
   \cup & \{(a, b) \in \mathbb{R}^2 : 1 \leq a \leq 2 \text{ and } -1 \leq b \leq 1\}  \\
@@ -229,7 +235,7 @@ Man wählt zufällig einen Punkt $P = (U, V)$ in dem Gebiet $D$. Die gemeinsame 
     0    & \text{otherwise}
   \end{cases}
 \end{align*}
-For $u < -1$, $F_U(u) = P(U \leq u) = 0$.
+\item For $u < -1$, $F_U(u) = P(U \leq u) = 0$.
 For $-1 \leq u \leq 1$, $F_U(u) = P(U \leq u) = $
 \[
   \int_u^{-1} \int_{-2}^{2} \frac{1}{10} \mathbf{1}_D(u, v) \, dv \, ds = \frac{4(u + 1)}{10}
@@ -260,7 +266,7 @@ and $F_U(u) = 1$ for $u > 2$.
   \frac{1}{2}\left(2[v \in [-2,2]] + [v \in [-1,1]]\right)
 \]
 
-If U and V are independent, then for all u and v:
+\item If U and V are independent, then for all u and v:
 
 \[
   f_U(u) \cdot f_V(v) = f_{U,V}(u,v)
@@ -270,7 +276,7 @@ However, we have \(f_{U,V}(2,2) = 0\) and \(f_U(2) \cdot f_V(2) = \frac{1}{5}
 \cdot \frac{1}{5} \neq 0\).
 
 Therefore, U and V are not independent.
-
+\end{enumerate}
 \BoxEnd{}
 \subsection*{Unabhängigkeit}
 Die Zufallsvariablen $\zufallsvariablen$ heissen unabhängig, falls gilt
