--- a/probability-and-statistics/Source/Kapitel6.tex
+++ b/probability-and-statistics/Source/Kapitel6.tex
@@ -118,8 +118,26 @@ Und die Verwerfungebereiche:
 \end{align*}
 Wobei die $z$ Werte in der Tabelle nachgeschaut werden können
 und es gilt $z_\alpha = - z_{1 - \alpha}$.
+
 \BoxStart{}
-\subsection*{Beispiel Fehler 2. Art Berechnen}
+\subsection*{Beipsiel Fehler 1. Art berechnen}
+Sei $\Theta = [0, 1]$ und seien $X_1, \ldots , X_6$ unabhängig, identisch verteilt unter $P_\theta$
+mit $X_i \sim \text{Ber}(\theta)$. Wir betrachten die Nullhypothese $H_0 : \theta = \frac{1}{2}$ und die Alternativhypothese
+$H_A : \theta = \frac{1}{3}$. Wie hoch ist die Wahrscheinlichkeit eines Fehlers 1. Art für den Test $(T, K)$ mit
+$T = \sum_{i=1}^{6} X_i$ und $K = (-\infty, 0]$?
+
+Die Teststatistik $T$ ist die Summe der beobachteten Werte der $X_i$:
+\begin{align*}
+  P(T \in K)  &= P[T \leq 0] = P[T = 0] \\
+              &= P(X_1 = 0) \cdot P(X_2 = 0) \cdot \ldots \cdot P(X_6 = 0)\\
+              &= \left( \frac{1}{2} \right)^6 = \frac{1}{64} 
+\end{align*}
+
+
+
+\BoxEnd{}
+\BoxStart{}
+\subsection*{Beispiel Fehler 2. Art berechnen}
 Nehme an: einseitiger $z$-Test, $T = \frac{\overline{X}_n - \mu_0}{\sigma /
     \sqrt{n}}$, $\mu_0 = 70$.
 \begin{align*}
