--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -98,4 +98,9 @@ Es gilt:
 \end{center}
 
 \includegraphics*[width=\columnwidth]{sin-cos-tan}
+
+\section*{Sonstiges}
+\subsection*{Mitternachtsformel}
+\[ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} \]
+
 \newpage
