--- a/probability-and-statistics/Source/Kapitel4.tex
+++ b/probability-and-statistics/Source/Kapitel4.tex
@@ -313,7 +313,7 @@ Dichte von $Y$:
 Wobei man die Dichte durch ableiten der Verteilung erhält.
 \subsection*{Anwendung von Transformationen}
 Sei $F$ eine stetige und streng monoton wachsende Verteilungsfunktion mit
-Unkehrfunktion $F^{-1}$. Ist $X \sim \mathcal{U} (0, 1)$ und $Y = F^{-1} (X)$,
+Umkehrfunktion $F^{-1}$. Ist $X \sim \mathcal{U} (0, 1)$ und $Y = F^{-1} (X)$,
 so hat $Y$ gerade die Verteilungsfunktion $F$:
 \begin{align*}
   F_Y (t) & = P[Y \leq t] = P[F^{-1} (X) \leq t] \\
