--- a/probability-and-statistics/Source/Kapitel3.tex
+++ b/probability-and-statistics/Source/Kapitel3.tex
@@ -86,7 +86,8 @@ Verteilung auf der Menge $\N_0 = \{0, 1, 2, \dots\}$ mit Gewichtsfunktion:
           &                                                                                            & \text{für } k = 0, 1, 2, \dots \\
   E[X]    & = \Sn i \cdot \frac{\lambda^i}{i!} e^{-\lambda} = \lambda e^{-\lambda} e^\lambda = \lambda                                  \\
   E[X^2]  & = \lambda^2 + \lambda                                                                                                       \\
-  Var[X]  & = \lambda
+  Var[X]  & = \lambda \\
+  Bin(n, p) & \sim \mathcal{P}(\lambda) \text{ with } \lambda = n * p
 \end{align*}
 Ist eine Zufallsvariable $X$ Poisson verteilt mit Parameter $\lambda$
 schreiben wir $X \sim P (\lambda)$.
