--- a/probability-and-statistics/Source/Kapitel3.tex
+++ b/probability-and-statistics/Source/Kapitel3.tex
@@ -20,7 +20,7 @@ Es sei $A_i := \{\text{Erfolg beim $i$-ten Experiment}\}$ und:
           \end{cases}
         \]
 \end{itemize}
-\subsection*{Bernoulli-Verteilung}
+\begin{definition}{Bernoulli-Verteilung}
 Ein einziges 0-1-Experiment mit $\W (X) = \{0, 1\}$. Die Gewichtsfunktion ist
 gegeben durch $p_X (1) = p$, sowie $p_X (0) = 1-p$. Man schreibt kurz $X \sim
   Be (p)$. Es gilt:
@@ -28,7 +28,9 @@ gegeben durch $p_X (1) = p$, sowie $p_X (0) = 1-p$. Man schreibt kurz $X \sim
   E[X]   & = 1 \cdot P[X = 1] + 0 \cdot P[X = 0] = p \\
   Var[X] & = E[X^2] - {E[X]}^2 = p \cdot  (1-p)
 \end{align*}
-\subsection*{Binomialverteilung}
+\end{definition}
+\begin{definition}{Binomial Verteilung}
+
 Beschreibt die Anzahl der Erfolge bei $n$ unabhängigen 0-1-Experimenten mit
 Erfolgsparameter $p$. Also ist die Zufallsvariable respektive Gewichtsfunktion:
 \begin{align*}
@@ -40,7 +42,8 @@ und man schreibt kurz $X \sim Bin (n, p)$. Es gilt weiter:
   E[X]   & = \Sn E[Y_i] = n \cdot p                \\
   Var[X] & = \Sn Var[Y_i] = n \cdot p \cdot  (1-p)
 \end{align*}
-\subsection*{Geometrische Verteilung}
+\end{definition}
+\begin{definition}{Geometrische Verteilung}
 Bei einer unendlichen Folge von unabhängigen 0-1-Experimenten mit
 Erfolgsparameter $p$ sein $X$ die Wartezeit zum ersten Erfolg:
 \begin{align*}
@@ -54,7 +57,8 @@ wir schreiben $X \sim Geom (p)$ und es gilt:
   E[X \cdot  (X-1)] & = \frac{2 (1-p)}{p^2}          \\
   Var[X]            & = \frac{1-p}{p^2}
 \end{align*}
-\subsection*{Negativbinomiale Verteilung}
+\end{definition}
+\begin{definition}{Negativbnomiale Verteilung}
 Bei einer unendlichen Folge von unabhängigen 0-1-Experimenten mit
 Erfolgsparameter $p$ sein $X$ die Wartezeit zum $r$-ten Erfolg ($r \in \N$):
 \begin{align*}
@@ -66,8 +70,8 @@ wir schreiben $X \sim NB (r, p)$ und es gilt:
   E[X]   & = \sum_{i = 1}^r E[X_i] = \frac{r}{p}                  \\
   Var[X] & = \sum_{i = 1}^r Var[X_i] = \frac{r \cdot  (1-p)}{p^2}
 \end{align*}
-
-\subsection*{Hypergeometrische Verteilung}
+\end{definition}
+\begin{definition}{Hypergeometrische Verteilung}
 In einer Urne seien $n$ Gegenstände, davon $r$ vom Typ $1$ und $n-r$ vom Typ
 $2$. Man zieht ohne zurücklegen $m$ der Gegenstände. Die Zufallsvariable $X$
 beschreibt die Anzahl der Gegenstände vom Typ $1$ in der Stichprobe. Der
@@ -76,10 +80,11 @@ Wertebereich von $X$ ist $\W (X) = \{0, 1, \dots, \min (m, r)\}$ und:
   p_X (k) & = \frac{\binom{r}{k} \cdot \binom{n-r}{m-k}}{\binom{n}{m}}
           &                                                                                 & \text{für } k \in \W (X)                             \\
   E[X]    & = \Sn i \cdot p_X (i) = m \cdot \frac{r}{n}                                     &                          & \text{ (Nicht im Skript)} \\
-  Var[X]  & = m \cdot \frac{r}{n} \left  (1 - \frac{r}{n} \right) \cdot \frac{n - m}{n - 1} &                          & \text{ (Nicht im Skript)}
+  Var[X]  & = m \cdot \frac{r}{n} \left(1 - \frac{r}{n} \right) \cdot \frac{n - m}{n - 1} &                          & \text{ (Nicht im Skript)}
 \end{align*}
-\subsection*{Poisson Verteilung}
-Die Poisson Verteilung mit Parameter $\lambda \in (0, \infty)$ ist eine
+\end{definition}
+\begin{definition}{Poisson Verteilung}
+  Die Poisson Verteilung mit Parameter $\lambda \in (0, \infty)$ ist eine
 Verteilung auf der Menge $\N_0 = \{0, 1, 2, \dots\}$ mit Gewichtsfunktion:
 \begin{align*}
   p_X (k) & = e^{-\lambda} \cdot \frac{\lambda^k}{k!}
@@ -91,3 +96,4 @@ Verteilung auf der Menge $\N_0 = \{0, 1, 2, \dots\}$ mit Gewichtsfunktion:
 \end{align*}
 Ist eine Zufallsvariable $X$ Poisson verteilt mit Parameter $\lambda$
 schreiben wir $X \sim P (\lambda)$.
+\end{definition}
