--- a/probability-and-statistics/Source/Kapitel4.tex
+++ b/probability-and-statistics/Source/Kapitel4.tex
@@ -57,8 +57,8 @@ und hat die Eigenschaften:
   \item $\int_{-\infty}^\infty f_X (s) \; ds = 1$;
         das folgt aus $\lim_{t \ra + \infty} F_X (t) = 1$
 \end{itemize}
-\subsection*{Gleichverteilung}
-Die Gleichverteilung auf dem Intervall $[a, b]$ ist ein Modell für die
+\begin{definition}{Gleichverteilung}
+  Die Gleichverteilung auf dem Intervall $[a, b]$ ist ein Modell für die
 Zufällige Wahl eines Punktes in $[a, b]$. Die zugehörige Zufallsvariable $X$
 hat den Wertebereich $\W (X) = [a, b]$, sowie
 \begin{align*}
@@ -78,8 +78,9 @@ wir schreiben kurz $X \sim U (a, b)$.
 \begin{align*}
   E[X] = \frac{a + b}{2} &  & Var[X] = \frac{{(b - a)}^2}{12}
 \end{align*}
-\subsection*{Exponentialverteilung}
-Die Exponentialverteilung mit Parameter $\lambda > 0$ ist das stetige Analogon
+\end{definition}
+\begin{definition}{Exponential Verteilung}
+  Die Exponentialverteilung mit Parameter $\lambda > 0$ ist das stetige Analogon
 der Geometrischen Verteilung. Die zugehörige Zufallsvariable $X$ hat $\W (X) =
   [0, \infty)$, Dichte und Verteilungsfunktion:
 \begin{align*}
@@ -100,8 +101,9 @@ die Funktion Gedächtsnislos, dh. $\cond{X > t + s}{X > s} = P[X > t]$.
 \begin{align*}
   E[X] = \frac{1}{\lambda} &  & Var[X] = \frac{1}{\lambda^2}
 \end{align*}
-\subsection*{Normalverteilung}
-Die Normalverteilung hat zwei Parameter: $\mu \in \R$ und $\sigma^2 > 0$. Die
+\end{definition}
+\begin{definition}{Normal Verteilung}
+  Die Normalverteilung hat zwei Parameter: $\mu \in \R$ und $\sigma^2 > 0$. Die
 zugehörige Zufallsvariable $X$ hat den Wertebereich $\W (X) = \R$ und die
 Dichtefunktion:
 \begin{align*}
@@ -109,6 +111,8 @@ Dichtefunktion:
    &  & \text{für } t \in \R
 \end{align*}
 welche symmetrisch um $\mu$ ist. Wir schreiben kurz: $X \sim \Normalverteilt$.
+\end{definition}
+
 \subsection*{Standard Normalverteilung}
 Wichtige Normalverteilung mit $\Standardnormalverteilt$. Weder für die
 zugehörige Dichte $\vp (t)$ noch Verteilungsfunktion $\Phi (t)$ gibt es
