--- a/probability-and-statistics/Source/Kapitel10.tex
+++ b/probability-and-statistics/Source/Kapitel10.tex
@@ -2,7 +2,7 @@
 \newpage
 
 \section{Diskrete Verteilungen}
-
+\begin{fontsize}{10}{13}\selectfont
 \renewcommand{\arraystretch}{1.8}
 \resizebox{.99\linewidth}{!}{
 \begin{tabular}{||c|p{3.3cm}|*{4}{c|}|}
@@ -81,6 +81,6 @@
 	\left(1 + \frac{t^2}{n}\right)^{- \frac{n+1}{2}}$} & oof \\[10pt]
 	\hline
 \end{tabular}}
-
+\end{fontsize}
 \renewcommand{\arraystretch}{1}
 
