--- a/probability-and-statistics/Source/Kapitel7.tex
+++ b/probability-and-statistics/Source/Kapitel7.tex
@@ -129,8 +129,7 @@ sei $\zufallsvariablen$ i.i.d. unter dem Wahrscheinlichkeitsraum $ (\Omega, \F,
 \subsection*{Momentenschätzer}
 Der Vektor $\hat{\vt} (X_1, \dots, X_m)$ heisst Momentenschätzer des Parameters
 $\vt$.
-\BoxStart{}
-\subsection*{Beispiel: Normalverteile Stichprobe}
+\begin{definition}{Normalverteile Stichprobe}
 Sei $\zufallsvariablen$ i.i.d. $\Normalverteilt$-verteilt mit unbekannten
 Parametern $\vt = (\mu, \sigma^2)$. Damit berechnen wir mit der $\log$ max
 likelihood funktion Ableitungen setzen diese zu $0$ und bekommen:
@@ -143,7 +142,7 @@ so wählen wir für $T_2 = S^2$:
 \begin{align*}
   S^2 = \frac{1}{n-1} \Sn  {(X_i - \overline{X}_n)}^2
 \end{align*}
-\BoxEnd{}
+\end{definition}
 \subsection*{Normalverteile Stichproben}
 Seien $\zufallsvariablen$ i.i.d. $\sim \Normalverteilt$. Dann gilt:
 \begin{itemize}
