--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -100,7 +100,9 @@ Es gilt:
 \includegraphics*[width=\columnwidth]{sin-cos-tan}
 
 \section*{Sonstiges}
-\subsection*{Mitternachtsformel}
-\[ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} \]
-
+\[ax^2 + bx + c = 0 \Rightarrow x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]
+\[n! = n \cdot \frac{k=0}{(n - k)!k!}\]
+\[\sum_{k=0}^\infty q^k = \frac{1}{1 - q} \quad \text{for} \quad |q| < 1\]
+\[\sum_{k=0}^n q^k = \frac{1 - q^{n+1}}{1 - q} \quad \text{for} \quad q \neq 1\]
+\[(x + y)^n = \sum_{k=0}^n \binom{n}{k} x^{n-k} y^k\]
 \newpage
