--- a/probability-and-statistics/Source/main.tex
+++ b/probability-and-statistics/Source/main.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt]{extarticle}
+\documentclass[8pt]{extarticle}
 % Article
 % \documentclass[9pt]{extarticle}
 \usepackage[landscape, left=0.10cm, top=0.1cm, right=0.1cm, bottom=0.3cm, footskip=2pt]{geometry}
@@ -12,6 +12,7 @@
 \usepackage{amssymb}
 \usepackage{physics}
 \usepackage{enumerate}
+
 
 \usepackage{xcolor}
 \usepackage{tcolorbox}
@@ -56,6 +57,8 @@
 
 % for emumerating
 \usepackage{enumitem}
+
+\usepackage{amssymb}
 
 % for color coding
 \usetikzlibrary{backgrounds}
@@ -153,9 +156,10 @@
 \input{Kapitel6}
 \input{Kapitel7}
 \input{Kapitel8}
+\input{ex}
 \input{Kapitel10}
 \input{Kapitel9}
 
- 
+
 \end{multicols*}
 \end{document}
