--- a/probability-and-statistics/Source/Kapitel1.tex
+++ b/probability-and-statistics/Source/Kapitel1.tex
@@ -13,7 +13,7 @@ $2^\Omega$ ist die Menge aller Teilmengen von $\Omega$. Ein Prinzipielles
 Ereignis ist eine Teilmenge $A \subseteq \Omega$, also eine Kollektion von
 Elementarereignissen. Die Klasse aller beobachtbaren Ereignisse ist
 $\mathcal{F}$.
-\subsection*{$\sigma$-Algebra}
+\begin{definition}{$\sigma$-Algebra}
 Grundraum: Menge $\Omega$. $\omega \in \Omega$ heisst Elementarereigniss.
 \begin{itemize}
   \item $\Omega \in \F$
@@ -24,7 +24,7 @@ Grundraum: Menge $\Omega$. $\omega \in \Omega$ heisst Elementarereigniss.
   \item $A,B \in \F \Rightarrow A \cup B \in \F$
   \item $A,B \in \F \Rightarrow A \cap B \in \F$
 \end{itemize}	
-
+\end{definition}
 
 \subsection*{Wahrscheinlichkeitsmass}
 Eine Abbildung $\mathcal{P}: \F \to [0, 1]$ mit folgenden Eigenschaften:
@@ -55,18 +55,21 @@ Gleichverteilung auf $\Omega$. Dann ist für $A \subseteq \Omega$:
 \begin{align*}
   P[A] = \frac{\abs{A}}{\abs{\Omega}}
 \end{align*}
-\subsection*{Bedingte Wahrscheinlichkeit}
+\begin{definition}{Bedingte Wahrscheinlichkeit}
 Seien $A, B$ Ereignisse mit $P[A] > 0$. Die bedingte Wahrscheinlichkeit von $B$
 unter der Bedingung, dass $A$ eintritt wird definiert durch:
 \begin{align*}
-  P[B \;|\; A] & := \frac{P[B \cap A]}{P[A]}            \\
+  P[B \;|\; A] & := \frac{P[B \cap A]}{P[A]} \\
+               & = \frac{P[A, B]}{P[A]}\\
                & = \frac{P[A \;|\; B] \cdot P[B]}{P[A]}
 \end{align*}
-\subsection*{Multiplikationsregel}
+\end{definition}
+\begin{definition}{Multiplikationsregel}
 Es gilt:
 \begin{align*}
   P[A \cap B] = P[A \;|\; B] \cdot P[B] = P[B \;|\; A] \cdot P[A]
 \end{align*}
+\end{definition}
 \subsection*{Satz der totalen Wahrscheinlichkeit}
 Sei $A_1, \dots, A_n$ eine Zerlegung von $\Omega$ in paarweise disjunkte
 Ereignisse, d.h. $\bigcup_{i = 1}^n A_i = \Omega$ und $A_i \cap A_k = \emptyset
