--- a/probability-and-statistics/Source/Kapitel5.tex
+++ b/probability-and-statistics/Source/Kapitel5.tex
@@ -14,6 +14,24 @@ Die Momenterzeugende Funktion einer Zufallsvariable $X$ ist:
 \begin{align*}
   M_X (t) := E[e^{t \cdot X}] &  & \text{für } t \in \R
 \end{align*}
+
+\BoxStart{}
+\subsection*{Beispiel: momenterzeugende Funktion}
+Sei \(X\) eine exponentialverteilte Zufallsvariable mit Parameter \(\lambda\), d.h. \(X \sim \text{Exp}(\lambda)\). Berechnen Sie die momenterzeugende Funktion \(M_X(t)\).
+
+\begin{align*}
+  M_X(t) &= E[e^{tX}] \\
+         &= \int_{0}^{\infty} e^{tx} \lambda e^{-\lambda x} \, dx \\
+         &= \lambda \int_{0}^{\infty} e^{-(\lambda - t)x} \, dx = -\frac{\lambda}{\lambda - t} e^{-(\lambda - t)x} \bigg|_{0}^{\infty} \\
+         &\begin{aligned}
+           &= \begin{cases}
+                \frac{\lambda}{\lambda - t}, & \text{falls } t < \lambda, \\
+                \infty, & \text{falls } t \geq \lambda.
+              \end{cases}
+           \end{aligned}
+\end{align*}
+\BoxEnd{}
+
 \subsection*{Grosse Summenabweichung}
 Seien $\zufallsvariablen$ i.i.d. Zufallsvariablen, für welche die
 Momenterzeugende Funktion $M_X (t)$ für alle $t \in \R$ endlich ist. Für jedes
@@ -21,12 +39,27 @@ $b \in \R$ gilt dann:
 \begin{align*}
   P[S_n \geq b] \leq \exp \left( \inf_{t \in \R}  ( n \cdot \log M_X (t) - t \cdot b ) \right)
 \end{align*}
+
 \subsection*{Chernoff Schranken}
-Seien $\zufallsvariablen$ unabhängig mit $X_i \sim Be (p)$ und $S_n = \Sn X_i$.
-Sei $\mu_n := E[S_n] = \Sn p_i$ und $\delta > 0$. Dann gilt:
+Seien $\zufallsvariablen$ unabhängig mit $X_i \sim Be (p)$ und $X = \Sn X_i$.
+Sei $\mu_n := E[X] = \Sn p_i$ und $\delta > 0$. Dann gilt:
+Suppose $0 < \delta$, then
+\[ P(X \geq (1 + \delta)\mu) \leq e^{-\frac{\delta^2\mu}{2+\delta}}, \]
+and
+\[ P(X \leq (1 - \delta)\mu) \leq e^{-\frac{\delta^2\mu}{2}}. \]
+
+\BoxStart{}
+\subsection*{Beispiel: Chernoff Schranke}
+Suppose you toss a fair coin 200 times. How likely is it that you see
+at least 120 heads?
+The Chernoff bound says
+
 \begin{align*}
-  P[S_n \geq  (1 + \delta) \cdot \mu_n] \leq \left( \frac{e^\delta}{ (1+\delta)^{1 + \delta}} \right)^{\mu_n}
+  P(X \geq 120) &= P(X \geq (1 + \frac{20}{100}) \cdot 100) \leq e^{-\frac{1}{5^2} \cdot \frac{100}{2+\frac{1}{5}} \cdot 100} \\
+                &= e^{-\frac{20}{6}} = 0.0356
 \end{align*}
+
+\BoxEnd{}
 \subsection*{Schwaches Gesetz der grossen Zahlen}
 Sei $X_1, X_2, \dots$ eine Folge von unabhängigen Zufallsvariablen, die alle
 den gleichen Erwartungswert $E[X_i] = \mu$ und die gleiche Varianz $Var[X_i] =
