--- a/analysis-I/cheatsheet/main.tex
+++ b/analysis-I/cheatsheet/main.tex
@@ -18,6 +18,8 @@
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{tikz}
+
 
 % Mathematical typesetting & symbols
 \usepackage{amsthm, mathtools, amssymb} 
@@ -70,13 +72,8 @@
 
 % the main part; as background material we place the border, 
 % the section (current and other) tabs and the page number
-\backgroundsetup{
-scale=1,
-color=black,
-angle=0,
-opacity=1,
-contents={}
-}
+\usetikzlibrary{backgrounds}
+
 
 %\usepackage{sectsty}
 %\subsectionfont{\normalfont\small\bfseries\underline}
