--- a/analysis-II/main.tex
+++ b/analysis-II/main.tex
@@ -70,6 +70,7 @@
 
 % for emumerating
 \usepackage{enumitem}
+\usepackage{tikz}
 
 % for color coding
 \usetikzlibrary{backgrounds}
@@ -135,13 +136,13 @@ tab/.style={
 
 % the main part; as background material we place the border, 
 % the section (current and other) tabs and the page number
-\backgroundsetup{
-scale=1,
-color=black,
-angle=0,
-opacity=1,
-contents={}
-}
+%\backgroundsetup{
+%scale=1,
+%color=black,
+%angle=0,
+%opacity=1,
+%contents={}
+%}
 
 % define box
 \tikzstyle{fancytitle} =[fill=black, text=white, font=\bfseries]
@@ -1588,7 +1589,6 @@ Inhomogenous otherwise.
   \includegraphics[width=6cm]{ex1.png} 
   \includegraphics[width=6cm]{ex2.png} 
 \end{center}
-
 
 
 
