--- a/probability-and-statistics/Source/main.tex
+++ b/probability-and-statistics/Source/main.tex
@@ -12,6 +12,8 @@
 \usepackage{amssymb}
 \usepackage{physics}
 \usepackage{enumerate}
+\usepackage{tikz}
+\usepackage{background}
 
 
 \usepackage{xcolor}
@@ -87,13 +89,13 @@
 
 % the main part; as background material we place the border, 
 % the subsection*  (current and other) tabs and the page number
-\backgroundsetup{
-  scale=1,
-  color=black,
-  angle=0,
-  opacity=1,
-  contents={}
-}
+%\backgroundsetup{
+%  scale=1,
+%  color=black,
+%  angle=0,
+%  opacity=1,
+%  contents={}
+%}
 
 % Set indentation
 \setlength{\parindent}{2pt}
@@ -159,7 +161,6 @@
 \input{ex}
 \input{Kapitel10}
 \input{Kapitel9}
-
 
 \end{multicols*}
 \end{document}
