--- a/analysis-II/SUMMARY_TEX_ZIP/cheatsheet/main.tex
+++ b/analysis-II/SUMMARY_TEX_ZIP/cheatsheet/main.tex
@@ -17,6 +17,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{physics}
+\usepackage{tikz}
+
 
 % commands
 \newcommand{\R}{{\mathbb R}}
@@ -1304,5 +1306,6 @@ contents= {
     \item $tanh(x) := \frac{e^x - e^{-x}}{e^x + e^{-x}}: \mathbf{R} \rightarrow [-1, 1]$
   \end{enumerate}
   und es gilt $cosh^2(x) - sinh^2(x) = 1$\\ \\
+  This is a test.
 \end{multicols*}
 \end{document}
